--- a/templates/index.html
+++ b/templates/index.html
@@ -44,7 +44,15 @@
 
         <div class="sidebar-content">
             <div class="history-section">
-                <h3>Recent</h3>
+                <div class="history-header">
+                    <h3>Recent</h3>
+                    <button class="clear-history-btn" onclick="clearAllHistory()" title="Clear all history">
+                        <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <polyline points="3 6 5 6 21 6"></polyline>
+                            <path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"></path>
+                        </svg>
+                    </button>
+                </div>
                 <div id="historyList" class="history-list">
                     <!-- History items will be populated here -->
                 </div>
