--- a/templates/signup.html
+++ b/templates/signup.html
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Create account - Zypher AI</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-    <link rel="icon" href="{{ url_for('serve_photos', filename='favicon.ico') }}" type="image/x-icon">
-    <link rel="shortcut icon" href="{{ url_for('serve_photos', filename='favicon.ico') }}" type="image/x-icon">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/signup.css') }}">
+    <!-- Favicon - Zypher Logo -->
+    <link rel="icon" href="{{ url_for('serve_photos', filename='zypher.jpeg') }}" type="image/jpeg">
+    <link rel="shortcut icon" href="{{ url_for('serve_photos', filename='zypher.jpeg') }}" type="image/jpeg">
+    <link rel="apple-touch-icon" href="{{ url_for('serve_photos', filename='zypher.jpeg') }}">
 </head>
 <body>
     <main>
