--- a/templates/upgrade.html
+++ b/templates/upgrade.html
@@ -6,10 +6,15 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Upgrade - Zypher AI</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/upgrade.css') }}">
+    <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/upgrade.css') }}">
+    <!-- Favicon - Zypher Logo -->
+    <link rel="icon" href="{{ url_for('serve_photos', filename='zypher.jpeg') }}" type="image/jpeg">
+    <link rel="shortcut icon" href="{{ url_for('serve_photos', filename='zypher.jpeg') }}" type="image/jpeg">
+    <link rel="apple-touch-icon" href="{{ url_for('serve_photos', filename='zypher.jpeg') }}">
 </head>
 
 <body>
