--- a/templates/login.html
+++ b/templates/login.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/login.css') }}">
     <!-- Favicon - Zypher Logo -->
-    <link rel="icon" href="{{ url_for('serve_photos', filename='zypher.jpeg') }}" type="image/jpeg">
-    <link rel="shortcut icon" href="{{ url_for('serve_photos', filename='zypher.jpeg') }}" type="image/jpeg">
-    <link rel="apple-touch-icon" href="{{ url_for('serve_photos', filename='zypher.jpeg') }}">
+    <link rel="icon" href="{{ url_for('auth.serve_photos', filename='zypher.jpeg') }}" type="image/jpeg">
+    <link rel="shortcut icon" href="{{ url_for('auth.serve_photos', filename='zypher.jpeg') }}" type="image/jpeg">
+    <link rel="apple-touch-icon" href="{{ url_for('auth.serve_photos', filename='zypher.jpeg') }}">
 </head>
 <body>
     <main>
