--- a/templates/upgrade.html
+++ b/templates/upgrade.html
@@ -12,9 +12,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <!-- Favicon - Zypher Logo -->
-    <link rel="icon" href="{{ url_for('serve_photos', filename='zypher.jpeg') }}" type="image/jpeg">
-    <link rel="shortcut icon" href="{{ url_for('serve_photos', filename='zypher.jpeg') }}" type="image/jpeg">
-    <link rel="apple-touch-icon" href="{{ url_for('serve_photos', filename='zypher.jpeg') }}">
+    <link rel="icon" href="{{ url_for('auth.serve_photos', filename='zypher.jpeg') }}" type="image/jpeg">
+    <link rel="shortcut icon" href="{{ url_for('auth.serve_photos', filename='zypher.jpeg') }}" type="image/jpeg">
+    <link rel="apple-touch-icon" href="{{ url_for('auth.serve_photos', filename='zypher.jpeg') }}">
 </head>
 
 <body>
